--- a/libraries/mocha/package.json
+++ b/libraries/mocha/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "commander": "2.0.0",
-    "growl": "1.7.x",
+    "growl": "~> 1.10.0",
     "jade": "0.26.3",
     "diff": "1.0.7",
     "debug": "*",
