--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "doctrine/cache": "1.6.1",
         "doctrine/collections": "1.4.0",
         "doctrine/common": "2.7.2",
-        "doctrine/inflector": "1.1.0"
+        "doctrine/inflector": "1.1.0",
+        "drupal/easy_install": "^10.1"
     },
     "repositories": [
         {
@@ -32,15 +33,11 @@
     ],
     "scripts": {
       "post-install-cmd": [
-        "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-		"DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
-		"DrupalProject\\composer\\ScriptHandler::removeGitDirectories"
-      ],
+        "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
+		],
       "post-update-cmd": [
-        "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-		"DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
-		"DrupalProject\\composer\\ScriptHandler::removeGitDirectories"
-      ]
+        "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
+		]
     },
     "extra": {
         "installer-types": [
