--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
         "drupal/transaction_workflow": "^1.0",
         "drupal/views_add_button": "^1.0",
         "drupal/views_add_button_group": "^1.0",
-        "drupal/blocktabs": "^1.0"
+        "drupal/blocktabs": "^1.0",
+        "drupal/serial": "1.x-dev",
+        "drupal/computed_field": "^2.0",
+        "drupal/unique_field_ajax": "^1.2"
         },
     "repositories": [
         {
