--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "drupal/zurb_foundation": "^6.0",
         "drupal/entity_serial": " 1.x-dev",
         "drupal/fences": "^2.0@alpha",
-        "drupal/entity_collector": "^1.0"
+        "drupal/entity_collector": "^1.0",
+        "drupal/social_course": "2.x-dev"
         },
     "repositories": [
         {
