add farmsys modules in vendor folder

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,11 @@
         "drupal/multivaluefield": "^1.0",
         "drupal/basic_data": "1.x-dev",
         "drupal/flag_attendance_field": "^1.0",
-        "drupal/state_form_entity": "1.x-dev"
+        "drupal/state_form_entity": "1.x-dev",
+        "farmsys/farmsys_asset": "dev-master",
+        "farmsys/liability": "dev-master",
+        "farmsys/medical": "dev-master",
+        "farmsys/milk": "dev-master"
         },
     "repositories": [
         {
