--- a/modules/custom/farmsys_milk/config/install/views.view.milk_profile.yml
+++ b/modules/custom/farmsys_milk/config/install/views.view.milk_profile.yml
@@ -71,6 +71,7 @@ display:
       row:
         type: 'entity:node'
         options:
+          relationship: none
           view_mode: teaser
       fields:
         title:
@@ -215,6 +216,26 @@ display:
           entity_field: uid
           plugin_id: numeric
       display_extenders: {  }
+      use_ajax: true
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 2
+    display_options:
+      display_extenders:
+        views_ef_fieldset: {  }
+      block_description: 'Milk Profile'
     cache_metadata:
       max-age: -1
       contexts:
@@ -235,7 +256,7 @@ display:
         views_ef_fieldset: {  }
       path: user/%user/milk
       menu:
-        type: tab
+        type: none
         title: Milk
         description: Milk
         expanded: true
