--- a/composer.json
+++ b/composer.json
@@ -66,8 +66,7 @@
         "drupal/datetime_extras": "^1.0",
         "drupal/views_ef_fieldset": "^1.3",
         "drupal/scheduled_updates": "^1.0",
-        "drupal/physical": "^1.0",
-        "drupal/menu_link": "^1.0"							  									  							 
+        "drupal/physical": "^1.0"							  									  							 
         },
     "repositories": [
         {
