--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
         "drupal/views_ef_fieldset": "^1.3",
         "drupal/scheduled_updates": "^1.0",
         "drupal/physical": "^1.0",
-        "drupal/menu_item_extras": "^2.4"							  									  							 
+        "drupal/menu_item_extras": "^2.4",
+        "drupal/rabbit_hole": "^1.0"							  									  							 
         },
     "repositories": [
         {
