--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
         "drupal/rabbit_hole": "^1.0",
         "drupal/views_accordion": "^1.2",
         "drupal/redhen_asset": "^1.0",
-        "drupal/entity_ui": "^1.0"							  									  							 
+        "drupal/entity_ui": "^1.0",
+        "drupal/yasm": "^1.2"							  									  							 
         },
     "repositories": [
         {
