add module drupal/ordered_list

--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,8 @@
         "drupal/redhen_asset": "^1.0",
         "drupal/entity_ui": "^1.0",
         "drupal/yasm": "^1.2",
-        "drupal/charts": "^3.0"							  									  							 
+        "drupal/charts": "^3.0",
+        "drupal/ordered_list": "^1.2"							  									  							 
         },
     "repositories": [
         {
