--- a/composer.json
+++ b/composer.json
@@ -73,8 +73,7 @@
         "drupal/recipe": "^2.0",
         "drupal/age_field_formatter": "^2.1",
         "drupal/range_units": "^1.0",
-        "drupal/basic_data": "1.x-dev",
-        "drupal/crm_core": "1.x-dev"		  									  							 
+        "drupal/basic_data": "1.x-dev"		  									  							 
         },
     "repositories": [
         {
