--- a/modules/contrib/crm_core/crm_core.info.yml
+++ b/modules/contrib/crm_core/crm_core.info.yml
@@ -2,13 +2,7 @@ name: CRM Core
 type: module
 description: 'Allows content to be submitted to the site and displayed on pages.'
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 test_dependencies:
   - search_api:search_api
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
