--- a/modules/contrib/crm_core/modules/crm_core_activity/crm_core_activity.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_activity/crm_core_activity.info.yml
@@ -2,7 +2,7 @@ name: CRM Core Activity
 type: module
 description: "Provides an entity for recording a contact's activities."
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 dependencies:
   - drupal:system (>=8.2.0)
@@ -12,9 +12,3 @@ dependencies:
   - drupal:datetime
   - drupal:options
   - dynamic_entity_reference:dynamic_entity_reference
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
