--- a/modules/contrib/crm_core/modules/crm_core_activity/tests/modules/crm_core_activity_plugin_test/crm_core_activity_plugin_test.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_activity/tests/modules/crm_core_activity_plugin_test/crm_core_activity_plugin_test.info.yml
@@ -2,12 +2,6 @@ name: CRM Core Activity plugin test
 type: module
 description: "Provides test activity plugin."
 package: CRM Core
-# core: 8.x
+core: 8.x
 dependencies:
   - crm_core:crm_core_activity
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
