--- a/modules/contrib/crm_core/modules/crm_core_contact/crm_core_contact.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_contact/crm_core_contact.info.yml
@@ -2,7 +2,7 @@ name: CRM Core Contact
 type: module
 description: 'Allows content to be submitted to the site and displayed on pages.'
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 configure: entity.crm_core_contact_type.collection
 
@@ -19,9 +19,3 @@ dependencies:
 
   # @todo Re-add once available and still needed.
 #  - field_group
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
