--- a/modules/contrib/crm_core/modules/crm_core_match/crm_core_match.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_match/crm_core_match.info.yml
@@ -2,7 +2,7 @@ name: CRM Core Match
 type: module
 description: 'Provides framework for identifying duplicate contacts in CRM Core contact records.'
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 configure: crm_core_match.match
 
@@ -13,9 +13,3 @@ dependencies:
 
 test_dependencies:
   - name:name
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
