--- a/modules/contrib/crm_core/modules/crm_core_relationship/crm_core_relationship.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_relationship/crm_core_relationship.info.yml
@@ -2,15 +2,9 @@ name: CRM Core Relationship
 type: module
 description: '.Provide relationship between contacts'
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 dependencies:
   - drupal:options
   - crm_core:crm_core_contact
   - relation:relation
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
