--- a/modules/contrib/crm_core/modules/crm_core_relationship_ui/crm_core_relationship_ui.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_relationship_ui/crm_core_relationship_ui.info.yml
@@ -2,7 +2,7 @@ name: CRM Core Relationship UI
 type: module
 description: 'User Interface for relationships between contacts. Back end is Relation module.'
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 configure: crm_core_relationship_ui.relationship_types
 
@@ -12,9 +12,3 @@ dependencies:
 stylesheets:
   all:
     crm_core_relationship_ui.css
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
