--- a/modules/contrib/crm_core/modules/crm_core_user_sync/crm_core_user_sync.info.yml
+++ b/modules/contrib/crm_core/modules/crm_core_user_sync/crm_core_user_sync.info.yml
@@ -2,15 +2,9 @@ name: CRM Core User Synchronization
 type: module
 description: 'Synchronizes CRM contacts with users.'
 package: CRM Core
-# core: 8.x
+core: 8.x
 
 configure: crm_core_user_sync.sync
 
 dependencies:
   - crm_core:crm_core_contact
-
-# Information added by Drupal.org packaging script on 2018-08-30
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'crm_core'
-datestamp: 1535672589
