review permission for crm_core_record

--- a/modules/custom/crm_core_farm/crm_core_farm.permissions.yml
+++ b/modules/custom/crm_core_farm/crm_core_farm.permissions.yml
@@ -18,4 +18,4 @@ view all crm_core_business revisions:
   'restrict access': TRUE
 
 permission_callbacks:
-  - \Drupal\crm_core_contact\ContactPermissions::permissions
+  - \Drupal\crm_core_farm\FarmPermissions::permissions
