update record views

--- a/modules/custom/crm_core_farm/config/install/views.view.crm_core_record_overview.yml
+++ b/modules/custom/crm_core_farm/config/install/views.view.crm_core_record_overview.yml
@@ -259,7 +259,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Individual Type'
+          label: 'Record Type'
           exclude: false
           alter:
             alter_text: false
