--- a/modules/custom/crm_core_farm/config/install/views.view.crm_core_individual_overview.yml
+++ b/modules/custom/crm_core_farm/config/install/views.view.crm_core_individual_overview.yml
@@ -2,16 +2,16 @@ langcode: en
 status: true
 dependencies:
   module:
-    - crm_core_farm
+    - crm_core_contact
     - name
     - user
-id: crm_core_record_overview
-label: 'CRM Core Record overview'
+id: crm_core_individual_overview
+label: 'CRM Core Individual overview'
 module: views
-description: 'The overview for CRM Core Record entities.'
+description: 'The overview for CRM Core Individual entities.'
 tag: ''
-base_table: crm_core_record
-base_field: record_id
+base_table: crm_core_individual
+base_field: individual_id
 core: 8.x
 display:
   default:
@@ -23,7 +23,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'view any crm_core_record entity'
+          perm: 'view any crm_core_individual entity'
       cache:
         type: tag
         options: {  }
@@ -113,10 +113,10 @@ display:
       row:
         type: fields
       fields:
-        record_id:
-          id: record_id
-          table: crm_core_record
-          field: record_id
+        individual_id:
+          id: individual_id
+          table: crm_core_individual
+          field: individual_id
           relationship: none
           group_type: group
           admin_label: ''
@@ -176,12 +176,12 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: crm_core_record
-          entity_field: record_id
+          entity_type: crm_core_individual
+          entity_field: individual_id
           plugin_id: field
         name__title:
           id: name__title
-          table: crm_core_record
+          table: crm_core_individual
           field: name__title
           relationship: none
           group_type: group
@@ -192,7 +192,7 @@ display:
             alter_text: false
             text: ''
             make_link: true
-            path: 'crm-core/record/{{ record_id }}'
+            path: 'crm-core/individual/{{ individual_id }}'
             absolute: false
             external: false
             replace_spaces: false
@@ -223,7 +223,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<a href="/crm-core/record/{{ record_id }}">Nameless #{{ record_id }}</a>'
+          empty: '<a href="/crm-core/individual/{{ individual_id }}">Nameless #{{ individual_id }}</a>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -249,17 +249,17 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: crm_core_record
+          entity_type: crm_core_individual
           entity_field: name
           plugin_id: field
         type:
           id: type
-          table: crm_core_record
+          table: crm_core_individual
           field: type
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Record Type'
+          label: 'Individual Type'
           exclude: false
           alter:
             alter_text: false
@@ -314,12 +314,12 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: crm_core_record
+          entity_type: crm_core_individual
           entity_field: type
           plugin_id: field
         changed:
           id: changed
-          table: crm_core_record
+          table: crm_core_individual
           field: changed
           relationship: none
           group_type: group
@@ -381,11 +381,11 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: crm_core_record
+          entity_type: crm_core_individual
           entity_field: changed
           plugin_id: field
         operations:
-          table: crm_core_record
+          table: crm_core_individual
           field: operations
           id: operations
           entity_type: null
@@ -439,7 +439,7 @@ display:
       filters:
         type:
           id: type
-          table: crm_core_record
+          table: crm_core_individual
           field: type
           relationship: none
           group_type: group
@@ -475,12 +475,12 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: crm_core_record
+          entity_type: crm_core_individual
           entity_field: type
           plugin_id: bundle
         name__given:
           id: name__given
-          table: crm_core_record
+          table: crm_core_individual
           field: name__given
           relationship: none
           group_type: group
@@ -515,12 +515,12 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: crm_core_record
+          entity_type: crm_core_individual
           entity_field: name
           plugin_id: string
         name__family:
           id: name__family
-          table: crm_core_record
+          table: crm_core_individual
           field: name__family
           relationship: none
           group_type: group
@@ -555,11 +555,11 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: crm_core_record
+          entity_type: crm_core_individual
           entity_field: name
           plugin_id: string
       sorts: {  }
-      title: Records
+      title: Individuals
       header: {  }
       footer: {  }
       empty:
@@ -572,7 +572,7 @@ display:
           admin_label: ''
           empty: true
           tokenize: false
-          content: 'There are no records available.'
+          content: 'There are no individuals available.'
           plugin_id: text_custom
       relationships: {  }
       arguments: {  }
@@ -586,14 +586,14 @@ display:
         - url.query_args
         - user.permissions
       tags: {  }
-  crm_core_record_overview:
+  crm_core_individual_overview:
     display_plugin: page
-    id: crm_core_record_overview
+    id: crm_core_individual_overview
     display_title: Page
     position: 1
     display_options:
       display_extenders: {  }
-      path: crm-core/record
+      path: crm-core/individual
     cache_metadata:
       max-age: 0
       contexts:
