remove crm_core_record files

--- a/modules/custom/crm_core_farm/crm_core_farm.info.yml
+++ b/modules/custom/crm_core_farm/crm_core_farm.info.yml
@@ -1,6 +1,6 @@
 name: CRM Core Farm
 type: module
-description: 'Allows farm to be submitted to the site and displayed on pages.'
+description: 'Allows farm to be submitted to the site and displayed on pages, its inspired from crm core contact module for organization.'
 package: CRM Core
 # core: 8.x
 
