add "drupal/button_link": "^1.1", +        "drupal/linked_field": "^1.1

--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,9 @@
         "drupal/crm_core": "1.x-dev",
         "drupal/module_builder": "^3.1",
         "drupal/switch_page_theme": "^1.0",
-        "drupal/prevent_term_delete": "^1.0@alpha"		  									  							 
+        "drupal/prevent_term_delete": "^1.0@alpha",
+        "drupal/button_link": "^1.1",
+        "drupal/linked_field": "^1.1"						  							 
         },
     "repositories": [
         {
