--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,8 @@
         "drupal/switch_page_theme": "^1.0",
         "drupal/prevent_term_delete": "^1.0@alpha",
         "drupal/button_link": "^1.1",
-        "drupal/linked_field": "^1.1"						  							 
+        "drupal/linked_field": "^1.1",
+        "drupal/responsive_views_grid": "^1.1"						  							 
         },
     "repositories": [
         {
