--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,9 @@
         "drupal/go_back": "^1.0",
         "drupal/entity_extra_field": "^1.0",
         "drupal/datatables": "^1.0",
-        "drupal/term_reference_fancytree": "^1.0"						  							 
+        "drupal/term_reference_fancytree": "^1.0",
+        "drupal/crm_core": "3.x-dev",
+        "drupal/base_field_override_ui": "^1.0"						  							 
         },
     "repositories": [
         {
