--- a/modules/contrib/content_planner/modules/content_kanban/content_kanban.routing.yml
+++ b/modules/contrib/content_planner/modules/content_kanban/content_kanban.routing.yml
@@ -14,14 +14,14 @@ content_kanban.settings:
   requirements:
     _permission: 'administer content kanban settings'
 
-content_kanban.upate_node_workflow_state:
-  path: '/admin/content-kanban/update-node-workflow-state/{node}/{state_id}'
+content_kanban.update_entity_workflow_state:
+  path: '/admin/content-kanban/update-entity-workflow-state/{entity_type}/{entity}/{state_id}'
   defaults:
-    _controller: '\Drupal\content_kanban\Controller\KanbanController::updateNodeWorkflowState'
+    _controller: '\Drupal\content_kanban\Controller\KanbanController::updateEntityWorkflowState'
   requirements:
     _custom_access: '\Drupal\content_kanban\Access\AccessCheck::canAccessContentKanban'
-    node: \d+
+    entity: \d+
   options:
     parameters:
-      node:
-        type: entity:node
+      entity:
+        type: entity
