--- a/modules/contrib/content_planner/modules/content_kanban/content_kanban.services.yml
+++ b/modules/contrib/content_planner/modules/content_kanban/content_kanban.services.yml
@@ -1,11 +1,11 @@
 services:
   content_kanban.kanban_service:
     class: Drupal\content_kanban\KanbanService
-    arguments: ['@config.factory', '@database', '@content_moderation.moderation_information']
+    arguments: ['@config.factory', '@database', '@content_moderation.moderation_information', '@entity_type.manager', '@module_handler', '@content_calendar.content_type_config_service']
 
   content_kanban.kanban_log_service:
     class: Drupal\content_kanban\KanbanLogService
-    arguments: ['@database']
+    arguments: ['@database', '@entity_type.manager']
 
   content_kanban.kanban_workflow_service:
     class: Drupal\content_kanban\KanbanWorkflowService
@@ -14,3 +14,9 @@ services:
   content_kanban.kanban_statistic_service:
     class: Drupal\content_kanban\KanbanStatisticService
     arguments: ['@database']
+
+  content_kanban.entity_params:
+    class: Drupal\content_kanban\ParamConverter\EntityParamConverter
+    arguments: ['@entity_type.manager']
+    tags:
+      - { name: paramconverter }
