--- a/modules/contrib/date_recur/tests/modules/date_recur_views_test/date_recur_views_test.info.yml
+++ b/modules/contrib/date_recur/tests/modules/date_recur_views_test/date_recur_views_test.info.yml
@@ -6,8 +6,8 @@ package: Testing
 dependencies:
  - drupal:views
 
-# Information added by Drupal.org packaging script on 2019-04-30
-version: '8.x-2.0-beta4'
+# Information added by Drupal.org packaging script on 2019-07-07
+version: '8.x-2.0'
 core: '8.x'
 project: 'date_recur'
-datestamp: 1556606887
+datestamp: 1562489588
