--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
         "drupal/entity_extra_field": "^1.0@alpha",
         "drupal/commerce": "^2.13",
         "drupal/og": "^1.0",
-        "drupal/commerce_demo": "^1.0"						  							 
+        "drupal/commerce_demo": "^1.0",
+        "drupal/taxonomy_term_depth": "^2.3"						  							 
         },
     "repositories": [
         {
