--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,8 @@
         "drupal/if_then_else": "^1.0",
         "drupal/commerce_stock": "^1.0",
         "drupal/commerce_reports": "^1.0",
-        "drupal/commerce_funds": "^1.0"						  							 
+        "drupal/commerce_funds": "^1.0",
+        "drupal/clever_theme_switcher": "^3.0"						  							 
         },
     "repositories": [
         {
