add fieldblock module

--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,8 @@
         "drupal/viewfield": "^3.0",
         "drupal/rules": "^3.0",
         "drupal/drulma": "^1.1",
-        "drupal/drulma_companion": "^1.2"						  							 
+        "drupal/drulma_companion": "^1.2",
+        "drupal/fieldblock": "^2.0"						  							 
         },
     "repositories": [
         {
