add drupal/jquery_colorpicker module

--- a/composer.json
+++ b/composer.json
@@ -93,7 +93,8 @@
         "drupal/zurb_foundation": "^6.0",
         "drupal/foundation_layouts": "^6.0",
         "drupal/views_any_route": "^1.0",
-        "drupal/colorapi": "^1.0"						  							 
+        "drupal/colorapi": "^1.0",
+        "drupal/jquery_colorpicker": "^2.0"						  							 
         },
     "repositories": [
         {
