jquery colorpicker 1.4 from 2.0

--- a/modules/contrib/jquery_colorpicker/jquery_colorpicker.libraries.yml
+++ b/modules/contrib/jquery_colorpicker/jquery_colorpicker.libraries.yml
@@ -2,9 +2,9 @@ library:
   version: 1.0.1
   css:
     theme:
-      vendor://jaypan/jquery-colorpicker/css/colorpicker.css: {}
+      /libraries/jquery_colorpicker/css/colorpicker.css: {}
   js:
-    vendor://jaypan/jquery-colorpicker/js/colorpicker.js: {}
+    /libraries/jquery_colorpicker/js/colorpicker.js: {}
   dependencies:
     - core/jquery
 
@@ -15,4 +15,3 @@ element:
   dependencies:
     - jquery_colorpicker/library
     - core/drupalSettings
-    - core/jquery.once
