--- a/modules/contrib/jquery_colorpicker/jquery_colorpicker.info.yml
+++ b/modules/contrib/jquery_colorpicker/jquery_colorpicker.info.yml
@@ -4,12 +4,8 @@ description: "Creates a jQuery colorpicker field and form element"
 type: "module"
 package: "Field"
 
-dependencies:
-  - vendor_stream_wrapper:vendor_stream_wrapper
-  - colorapi:colorapi
-
-# Information added by Drupal.org packaging script on 2018-10-09
-version: '8.x-2.0-rc1'
+# Information added by Drupal.org packaging script on 2018-04-15
+version: '8.x-1.4'
 core: '8.x'
 project: 'jquery_colorpicker'
-datestamp: 1539052687
+datestamp: 1523761087
