--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,8 @@
         "drupal/taxonomy_menu": "^3.4",
         "drupal/commerce_shipping": "^2.0",
         "drupal/facets": "^1.4",
-        "drupal/facets_pretty_paths": "^1.0"						  							 
+        "drupal/facets_pretty_paths": "^1.0",
+        "drupal/image_delta_formatter": "^1.0"						  							 
         },
     "repositories": [
         {
