add workbench reviewer and banana dashboard

--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,8 @@
         "drupal/facets": "^1.4",
         "drupal/facets_pretty_paths": "^1.0",
         "drupal/image_delta_formatter": "^1.0",
-        "drupal/bee": "^1.0"						  							 
+        "drupal/bee": "^1.0",
+        "drupal/workbench_reviewer": "^2.0"						  							 
         },
     "repositories": [
         {
