--- a/modules/contrib/theme_switcher/theme_switcher.info.yml
+++ b/modules/contrib/theme_switcher/theme_switcher.info.yml
@@ -1,4 +1,4 @@
-name: 'Theme switcher'
+name: 'Theme Switcher Rules'
 description: 'Switches active themes on specific conditions.'
 package: User Interface
 
@@ -10,7 +10,7 @@ configure: theme_switcher.admin
 
 php: 7.1
 
-# Information added by Drupal.org packaging script on 2019-09-08
-version: '8.x-1.0'
+# Information added by Drupal.org packaging script on 2019-09-18
+version: '8.x-1.1'
 project: 'theme_switcher'
-datestamp: 1567944186
+datestamp: 1568829486
