--- a/modules/contrib/banana_dashboard/banana_dashboard.banana_dashboard.yml
+++ b/modules/contrib/banana_dashboard/banana_dashboard.banana_dashboard.yml
@@ -14,6 +14,12 @@ dashboard_menu:
     title: Contents
     icon: menu
     url: /admin/content
+    
+  content-add:
+    group: Content
+    title: Add content
+    icon: icon-plus-sign-alt
+    url: /node/add
 
   people:
     group: System
