--- a/modules/contrib/banana_dashboard/banana_dashboard.banana_dashboard.yml
+++ b/modules/contrib/banana_dashboard/banana_dashboard.banana_dashboard.yml
@@ -18,7 +18,7 @@ dashboard_menu:
   content-add:
     group: Content
     title: Add content
-    icon: icon-plus-sign-alt
+    icon: plus-square
     url: /node/add
 
   people:
