--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,8 @@
         "drupal/workbench_reviewer": "^2.0",
         "drupal/banana_dashboard": "1.x-dev",
         "drupal/matrix_field": "1.x-dev",
-        "drupal/taxonomy_term_depth": "^2.3"						  							 
+        "drupal/taxonomy_term_depth": "^2.3",
+        "drupal/basic_data": "^1.0"						  							 
         },
     "repositories": [
         {
