--- a/composer.json
+++ b/composer.json
@@ -95,8 +95,7 @@
         "drupal/workbench_reviewer": "^2.0",
         "drupal/banana_dashboard": "1.x-dev",
         "drupal/taxonomy_term_depth": "^2.3",
-        "drupal/basic_data": "^1.0",
-        "drupal/crm_core": "3.x-dev"						  							 
+        "drupal/basic_data": "^1.0"						  							 
         },
     "repositories": [
         {
