update version of some modules

--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "drupal/blocktabs": "^1.0",
         "drupal/computed_field": "^2.0",
         "drupal/unique_field_ajax": "^1.2",
-        "drupal/pwa": "1.x-dev",
+        "drupal/pwa": "^1.0",
         "minishlink/web-push": "^2.0",
         "piwik/device-detector": "^3.0",
         "drupal/social_pwa": "^1.0",
         "drupal/conditional_fields": "^1.0",
         "drupal/entity_serial": " 1.x-dev",
-        "drupal/fences": "^2.0@alpha",
+        "drupal/fences": "^2.0",
         "drupal/social_course": "^2.0",
         "farmsys/farmsys_asset": "dev-master",
         "farmsys/liability": "dev-master",
@@ -50,15 +50,15 @@
         "drupal/ordered_list": "^1.2",
         "drupal/module_filter": "^3.1",
         "drupal/fullcalendar_view": "^2.2",
-        "drupal/recipe": "^2.0@alpha",
+        "drupal/recipe": "^2.0",
         "drupal/age_field_formatter": "^2.1",
-        "drupal/prevent_term_delete": "^1.1@alpha",
+        "drupal/prevent_term_delete": "^1.1",
         "drupal/button_link": "^1.1",
         "drupal/linked_field": "^1.1",
         "drupal/responsive_views_grid": "^1.1",
-        "drupal/term_reference_fancytree": "^1.0@beta",
+        "drupal/term_reference_fancytree": "^1.0",
         "drupal/views_accordion": "^1.2",
-        "drupal/entity_extra_field": "^1.0@alpha",
+        "drupal/entity_extra_field": "^1.0",
         "drupal/commerce": "^2.14",
         "drupal/form_display_visibility": "^1.0",
         "drupal/gutenberg": "^1.4",
@@ -95,7 +95,9 @@
         "drupal/workbench_reviewer": "^2.0",
         "drupal/banana_dashboard": "1.x-dev",
         "drupal/taxonomy_term_depth": "^2.3",
-        "drupal/basic_data": "^1.0"						  							 
+        "drupal/basic_data": "^1.0",
+        "drupal/name": "^1.0",
+        "drupal/crm_core": "3.x-dev"						  							 
         },
     "repositories": [
         {
