add taxonomy_entity_index module

--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,8 @@
         "drupal/name": "^1.0",
         "drupal/crm_core": "3.x-dev",
         "drupal/auto_entitylabel": "^3.0",
-        "drupal/autosave_form": "^1.0"						  							 
+        "drupal/autosave_form": "^1.0",
+        "drupal/taxonomy_entity_index": "^1.0"						  							 
         },
     "repositories": [
         {
