--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,9 @@
         "drupal/taxonomy_menu_ui": "^1.0",
         "drupal/menu_link_content_visibility": "^1.2",
         "drupal/maxlength": "^1.0",
-        "drupal/field_inheritance": "^1.0"						  							 
+        "drupal/field_inheritance": "^1.0",
+        "drupal/system_tags": "^1.6",
+        "drupal/number_formatter": "^1.0"						  							 
         },
     "repositories": [
         {
