remove duplicate entry in composer

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "doctrine/inflector": "1.1.0",
 		"doctrine/lexer": "1.0.2",
         "monolog/monolog": "^1.17",
+		"goalgorilla/open_social": "^7.0",
         "drupal/easy_install": "^10.1",
 		"drupal/blizz_dynamic_entitylist": "^2.34",
         "drupal/transaction": "^1.0",
@@ -68,6 +69,7 @@
         "drupal/entity_reference_display": "^1.2",
         "drupal/disable_field": "^2.0",
         "drupal/if_then_else": "^1.0",
+		"drupal/commerce": "^2.14",
         "drupal/commerce_stock": "^1.0",
         "drupal/commerce_reports": "^1.0",
         "drupal/commerce_funds": "^1.0",
@@ -107,18 +109,7 @@
         "drupal/field_inheritance": "^1.0",
         "drupal/system_tags": "^1.6",
         "drupal/number_formatter": "^1.0",
-        "drupal/get_a_quote": "^1.0",
-        "goalgorilla/open_social": "^7.0",
-        "drupal/profile": "1.0-rc6",
-        "drupal/pathauto": "^1.4",
-        "drupal/paragraphs": "^1.8",
-        "drupal/views_bulk_operations": "^3.2",
-        "drupal/csv_serialization": "2.0-beta1",
-        "drupal/search_api":"^1.14",
-		"league/csv": "^9.3",
-		"drupal/group": "1.0-rc4",
-		"drupal/better_exposed_filters": "3.0-alpha6",
-        "drupal/commerce": "^2.14"
+        "drupal/get_a_quote": "^1.0"
 		
         },
     "repositories": [
