add svg_image module

--- a/composer.json
+++ b/composer.json
@@ -109,7 +109,8 @@
         "drupal/field_inheritance": "^1.0",
         "drupal/system_tags": "^1.6",
         "drupal/number_formatter": "^1.0",
-        "drupal/get_a_quote": "^1.0"
+        "drupal/get_a_quote": "^1.0",
+        "drupal/svg_image": "^1.9"
 		
         },
     "repositories": [
