--- a/modules/contrib/bat/.travis.yml
+++ b/modules/contrib/bat/.travis.yml
@@ -18,10 +18,11 @@ mysql:
   encoding: utf8
 
 before_install:
+  - bash ./test/behat/scripts/install-imagick.sh
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - wget http://chromedriver.storage.googleapis.com/75.0.3770.90/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/bin
+  - wget http://chromedriver.storage.googleapis.com/77.0.3865.40/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/bin
 
 install:
   # Set unlimited memory_limit.
@@ -85,8 +86,8 @@ before_script:
   - jdk_switcher use oraclejdk8
 
   - mkdir -p $HOME/.cache
-  - wget -nc -O $HOME/.cache/selenium-server-standalone-3.11.0.jar http://selenium-release.storage.googleapis.com/3.11/selenium-server-standalone-3.11.0.jar || true
-  - java -jar $HOME/.cache/selenium-server-standalone-3.11.0.jar -port 4444 &> /tmp/selenium.log &
+  - wget -nc -O $HOME/.cache/selenium-server-standalone-3.14.0.jar http://selenium-release.storage.googleapis.com/3.14/selenium-server-standalone-3.14.0.jar || true
+  - java -jar $HOME/.cache/selenium-server-standalone-3.14.0.jar -port 4444 &> /tmp/selenium.log &
   - sleep 5
 
 script:
@@ -102,6 +103,9 @@ script:
   - ./bin/behat
 
 after_failure:
+  # Upload screenshots
+  - cd /tmp; for file in *.png; do convert $file -define jpeg:extent=2000kb "`basename $file .png`.jpg"; done
+  - $TRAVIS_BUILD_DIR/test/behat/scripts/uploadr-pie /tmp/*.jpg
   - echo "### DB LOG ###"
   - cd $TRAVIS_BUILD_DIR/bat
   - drush sqlq 'SELECT * FROM watchdog\G'
