--- a/modules/contrib/bat/bat.info.yml
+++ b/modules/contrib/bat/bat.info.yml
@@ -1,11 +1,12 @@
 name: Booking and Availability Management
 type: module
 description: A generalized Booking and Availability Management Framework.
-# core: 8.x
+core: 8.x
 package: bat
+dependencies:
+  - drupal:system (>=8.7.0)
 
-# Information added by Drupal.org packaging script on 2019-07-12
-version: '8.x-1.1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-10-16
+version: '8.x-1.2'
 project: 'bat'
-datestamp: 1562971388
+datestamp: 1571242393
