--- a/modules/contrib/bat/modules/bat_calendar_reference/bat_calendar_reference.info.yml
+++ b/modules/contrib/bat/modules/bat_calendar_reference/bat_calendar_reference.info.yml
@@ -1,14 +1,13 @@
 name: BAT Calendar Reference
 type: module
 description: Provides a field to reference and display event information on any fieldable entity.
-# core: 8.x
+core: 8.x
 package: bat
 
 dependencies:
   - bat:bat_fullcalendar
 
-# Information added by Drupal.org packaging script on 2019-07-12
-version: '8.x-1.1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-10-16
+version: '8.x-1.2'
 project: 'bat'
-datestamp: 1562971388
+datestamp: 1571242393
