--- a/modules/contrib/bat/modules/bat_event/bat_event.info.yml
+++ b/modules/contrib/bat/modules/bat_event/bat_event.info.yml
@@ -1,15 +1,14 @@
 name: BAT Event
 type: module
 description: Create and administer events for BAT.
-# core: 8.x
+core: 8.x
 package: bat
 
 dependencies:
   - bat:bat_unit
   - drupal:datetime_range
 
-# Information added by Drupal.org packaging script on 2019-07-12
-version: '8.x-1.1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-10-16
+version: '8.x-1.2'
 project: 'bat'
-datestamp: 1562971388
+datestamp: 1571242393
