--- a/modules/contrib/bat/modules/bat_facets/bat_facets.info.yml
+++ b/modules/contrib/bat/modules/bat_facets/bat_facets.info.yml
@@ -1,7 +1,7 @@
 name: BAT Facets
 type: module
 description: Facet API facets for BAT.
-# core: 8.x
+core: 8.x
 package: bat
 
 dependencies:
@@ -9,8 +9,7 @@ dependencies:
   - search_api:search_api
   - facets:facets
 
-# Information added by Drupal.org packaging script on 2019-07-12
-version: '8.x-1.1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-10-16
+version: '8.x-1.2'
 project: 'bat'
-datestamp: 1562971388
+datestamp: 1571242393
