--- a/modules/contrib/bat/modules/bat_fullcalendar/bat_fullcalendar.info.yml
+++ b/modules/contrib/bat/modules/bat_fullcalendar/bat_fullcalendar.info.yml
@@ -1,7 +1,7 @@
 name: BAT Fullcalendar
 type: module
 description: Provides a generalized API for manipulating FullCalendar widgets for BAT
-# core: 8.x
+core: 8.x
 package: bat
 
 dependencies:
@@ -9,8 +9,7 @@ dependencies:
   - bat:bat_event
   - fullcalendar_library:fullcalendar_library
 
-# Information added by Drupal.org packaging script on 2019-07-12
-version: '8.x-1.1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-10-16
+version: '8.x-1.2'
 project: 'bat'
-datestamp: 1562971388
+datestamp: 1571242393
