--- a/modules/contrib/membership_entity/membership_entity.info.yml
+++ b/modules/contrib/membership_entity/membership_entity.info.yml
@@ -1,18 +1,12 @@
 name: 'Membership Entity'
 type: module
 description: 'Create and manage memberships.'
-# core: 8.x
+core: 8.x
 php: 7.1
 package: 'Memberships'
-# version: VERSION
+version: VERSION
 
 dependencies:
   - drupal:system (>= 8.5.0)
   - options
   - views
-
-# Information added by Drupal.org packaging script on 2018-04-08
-version: '8.x-2.x-dev'
-core: '8.x'
-project: 'membership_entity'
-datestamp: 1523224984
