--- a/composer.json
+++ b/composer.json
@@ -112,7 +112,8 @@
         "drupal/svg_image": "^1.9",
         "drupal/inline_entity_revision_form": "^1.1",
         "drupal/membership_entity": "2.x-dev",
-        "drupal/commerce_funds": "^1.0"
+        "drupal/commerce_funds": "^1.0",
+        "drupal/user_bundle": "1.x-dev"
 		
         },
     "repositories": [
