--- a/composer.json
+++ b/composer.json
@@ -110,7 +110,8 @@
         "drupal/context_profile_role": "^1.3",
         "drupal/profile_form_mode": "^1.0",
         "drupal/account_field_split": "^1.0@alpha",
-        "drupal/entity_redirect": "^1.5"
+        "drupal/entity_redirect": "^1.5",
+        "drupal/commerce_vendor": "^1.0"
 		
         },
     "repositories": [
