--- a/composer.json
+++ b/composer.json
@@ -111,7 +111,8 @@
         "drupal/profile_form_mode": "^1.0",
         "drupal/account_field_split": "^1.0@alpha",
         "drupal/entity_redirect": "^1.5",
-        "drupal/commerce_vendor": "^1.0"
+        "drupal/commerce_vendor": "^1.0",
+        "drupal/fullcalendar_api": "^1.0"
 		
         },
     "repositories": [
