--- a/modules/contrib/calendar/calendar.info.yml
+++ b/modules/contrib/calendar/calendar.info.yml
@@ -6,11 +6,5 @@ dependencies:
   - views
   - views_templates
 package: Date/Time
-# core: 8.x
+core: 8.x
 configure: 'calendar.admin_form'
-
-# Information added by Drupal.org packaging script on 2018-07-05
-version: '8.x-1.x-dev'
-core: '8.x'
-project: 'calendar'
-datestamp: 1530790739
