--- a/modules/contrib/commerce_vendor/commerce_vendor.links.menu.yml
+++ b/modules/contrib/commerce_vendor/commerce_vendor.links.menu.yml
@@ -18,12 +18,12 @@ commerce_vendor.vendor_configuration:
   parent: commerce.configuration
 
 # Branch menu items definition
-entity.branch.collection:
-  title: 'Branches'
-  route_name: entity.branch.collection
-  description: 'Manage Vendors Branches'
-  parent: entity.vendor.collection
-  weight: -200
+#entity.branch.collection:
+#  title: 'Branches'
+#  route_name: entity.branch.collection
+#  description: 'Manage Vendors Branches'
+#  parent: entity.vendor.collection
+#  weight: -200
 
 branch.admin.structure.settings:
   title: 'Branch settings'
