add flexible views module

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "doctrine/collections": "1.4.0",
         "doctrine/common": "2.7.2",
         "doctrine/inflector": "1.1.0",
-		    "doctrine/lexer": "1.0.2",
+		"doctrine/lexer": "1.0.2",
         "monolog/monolog": "^1.17",
-		    "goalgorilla/open_social": "^7.0",
+		"goalgorilla/open_social": "^7.0",
         "drupal/easy_install": "^10.1",
         "drupal/computed_field": "^2.0",
         "drupal/unique_field_ajax": "^1.2",
@@ -35,7 +35,7 @@
         "farmsys/liability": "dev-master",
         "farmsys/medical": "dev-master",
         "farmsys/milk": "dev-master",
-		    "drupal/forms_steps": "^1.0",
+		"drupal/forms_steps": "^1.0",
         "drupal/date_recur_modular": "^1.0",
         "drupal/social_geolocation": "^1.0",
         "drupal/duration_field": "^2.0",
@@ -57,9 +57,9 @@
         "drupal/form_display_visibility": "^1.0",
         "drupal/icon_api": "^2.0",
         "drupal/entity_reference_display": "^1.2",
-        "drupal/disable_field": "^2.0",
+        "drupal/disable_field": "^2.3",
         "drupal/if_then_else": "^1.0",
-		    "drupal/commerce": "^2.16",
+		"drupal/commerce": "^2.16",
         "drupal/commerce_reports": "^1.0",
         "drupal/views_add_button_group": "^1.2",
         "drupal/viewfield": "^3.0",
@@ -103,7 +103,7 @@
         "drupal/entity_redirect": "^1.5",
         "drupal/commerce_vendor": "^1.2",
         "drupal/datatables": "1.x-dev",
-        "drupal/commerce_invoice": "^1.0",
+        "drupal/commerce_invoice": "^2.0",
         "drupal/commerce_product_tax": "^1.0",
         "drupal/taxonomy_unique": "^2.2",
         "tecnickcom/tcpdf": "^6.3",
@@ -119,7 +119,8 @@
         "drupal/role_inheritance": "^1.0",
         "drupal/social_pwa": "^1.0@alpha",
         "drupal/commerce_stock": "^1.0@alpha",
-        "drupal/dashboards": "^1.0"
+        "drupal/dashboards": "^1.0",
+        "drupal/flexible_views": "^1.0"
 
         },
     "repositories": [
