--- a/modules/contrib/commerce_invoice/commerce_invoice.routing.yml
+++ b/modules/contrib/commerce_invoice/commerce_invoice.routing.yml
@@ -5,3 +5,25 @@ commerce_invoice.configuration:
     _title: 'Invoices'
   requirements:
     _permission: 'access commerce administration pages'
+
+entity.commerce_order.invoice_generate_form:
+  path: '/admin/commerce/orders/{commerce_order}/invoices/generate'
+  defaults:
+    _form: \Drupal\commerce_invoice\Form\InvoiceGenerateForm
+  options:
+    parameters:
+      commerce_order:
+        type: 'entity:commerce_order'
+  requirements:
+    commerce_order: '\d+'
+    _invoice_generate_form_access: 'TRUE'
+    _invoice_order_access: 'TRUE'
+
+entity.commerce_order.invoices:
+  path: '/admin/commerce/orders/{commerce_order}/invoices'
+  options:
+    parameters:
+      commerce_order:
+        type: 'entity:commerce_order'
+  requirements:
+    _invoice_order_access: 'TRUE'
