--- a/modules/contrib/commerce_invoice/config/install/views.view.commerce_user_invoices.yml
+++ b/modules/contrib/commerce_invoice/config/install/views.view.commerce_user_invoices.yml
@@ -490,14 +490,52 @@ display:
           content: 'No invoices yet.'
           plugin_id: text_custom
       relationships: {  }
-      arguments: {  }
+      arguments:
+        uid:
+          id: uid
+          table: commerce_invoice_field_data
+          field: uid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: 'not found'
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: current_user
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          entity_type: commerce_invoice
+          entity_field: uid
+          plugin_id: numeric
       display_extenders: {  }
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
+        - user
         - user.permissions
       tags: {  }
   user_page:
@@ -523,6 +561,8 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
+        - user
         - user.permissions
       tags: {  }
