--- a/modules/custom/timeline/config/install/core.entity_view_display.node.timeline.teaser.yml
+++ b/modules/custom/timeline/config/install/core.entity_view_display.node.timeline.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.timeline.body
     - field.field.node.timeline.field_timeline_date
+    - field.field.node.timeline.field_timeline_link
     - field.field.node.timeline.field_timeline_media
     - node.type.timeline
   module:
@@ -173,4 +174,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_timeline_link: true
   search_api_excerpt: true
