--- a/modules/custom/timeline/config/install/views.view.timeline.yml
+++ b/modules/custom/timeline/config/install/views.view.timeline.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - node.type.timeline
   module:
+    - datetime
     - node
     - simple_timeline
     - user
@@ -184,6 +185,19 @@ display:
           entity_field: type
           plugin_id: bundle
       sorts:
+        field_timeline_date_value:
+          id: field_timeline_date_value
+          table: node__field_timeline_date
+          field: field_timeline_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: hour
+          plugin_id: datetime
         created:
           id: created
           table: node_field_data
