add views autosubmit

--- a/modules/contrib/views_autosubmit/views_autosubmit.libraries.yml
+++ b/modules/contrib/views_autosubmit/views_autosubmit.libraries.yml
@@ -1,7 +1,7 @@
 autosubmit:
   version: 1.0
   js:
-    js/auto-submit.js: {}
+    js/views_autosubmit.js: {}
   dependencies:
     - core/jquery
     - core/jquery.once
